--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A tiny helper to assert that response from `fetch()` is ok.",
   "type": "module",
   "main": "index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test:unit": "node --test",
     "test:types": "tsc -p .",
@@ -21,6 +22,10 @@
     "url": "https://github.com/CheckerNetwork/assert-ok-response/issues"
   },
   "homepage": "https://github.com/CheckerNetwork/assert-ok-response#readme",
+  "files": [
+    "index.js",
+    "dist"
+  ],
   "devDependencies": {
     "@types/node": "^22.13.10",
     "eslint": "^9.22.0",
